# gomoku

./: .fuse_hidden000090e800000001  .gitignore  .project  Board.hs  Main.hs  Minmax.hs  README.txt  gomoku.cabal
src/: *REPL* [haskell]  Board.hs  BoardMap.hs  Main.hs  Minmax.hs  Neighborhood.hs
src/Nope/: Board-przerobka klaudii.hs  Board.hs  Main.hs  board_sobol.hs  board_sobol_2.hs  gra-szalwa.hs
src/Nope/gom-hub1/: AI.hs  Board.hs  Draw.hs  Input.hs  Main.hs
src/Nope/gom-hub1/Documentation/: AI.html  Board.html  Draw.html  Input.html  Main.html  doc-index.html  index-frames.html  index.html  mini_AI.html  mini_Board.html  mini_Draw.html  mini_Main.html
