name:           gomoku
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         yevv

library
  hs-source-dirs:  src
  build-depends:   base >= 4
  ghc-options:     -Wall

executable gomoku
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4
  ghc-options:     -Wall

